--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
-    "start": "vite --port 3000",
-    "build": "vite build && tsc",
-    "serve": "vite preview",
+    "dev": "concurrently \"yarn codegen:watch\" \"vite --port 3000\"",
+    "start": "concurrently \"yarn codegen:watch\" \"vite --port 3000\"",
+    "build": "yarn codegen && vite build && tsc",
+    "serve": "yarn codegen && vite preview",
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier",
-    "check": "prettier --write . && eslint --fix"
+    "check": "prettier --write . && eslint --fix",
+    "codegen": "npx graphql-codegen --config codegen.ts",
+    "codegen:watch": "npx graphql-codegen --config codegen.ts --watch"
   },
   "dependencies": {
+    "@graphql-typed-document-node/core": "3.1.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.2.2",
     "@tanstack/react-query": "^5.66.5",
@@ -20,6 +23,7 @@
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.131.5",
     "@tanstack/router-plugin": "^1.121.2",
+    "graphql": "^16.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6"
@@ -27,6 +31,7 @@
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.15.0",
     "@graphql-codegen/cli": "^6.0.0",
+    "@graphql-codegen/client-preset": "^5.0.1",
     "@graphql-codegen/schema-ast": "^5.0.0",
     "@parcel/watcher": "^2.5.1",
     "@tanstack/eslint-config": "^0.3.0",
@@ -35,9 +40,11 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.2.1",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.7.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2",
     "vite": "^6.3.5",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4"
